[tool.poetry]
name = "efb-extract"
version = "0.1.0"
description = ""
authors = ["Ray <megrxu@proton.me>"]
readme = "README.md"
packages = [{ include = "efb_extract" }]

[tool.poetry.dependencies]
python = "^3.11"
efb-wechat-slave = "^2.0.7"
flask = "^2.3.2"
ehforwarderbot = "^2.1.1"
efb-telegram-master = "^2.3.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
refresh-avatars = 'efb_extract.jobs:refresh_avatars'
